lda/lda-frontend-prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lda-frontend-deploy
spec:
  selector:
    matchLabels:
      app: lda-frontend-deploy
  template:
    metadata:
      labels:
        app: lda-frontend-deploy
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3404"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: lda-frontend-deploy
          image: ldamasio/lda-frontend:latest
          ports:
          - containerPort: 3404
