lda/lda-frontend-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: lda-frontend-svc
spec:
  selector:
    app: lda-frontend-deploy
  ports:
    - port: 80
      targetPort: 3404
  type: LoadBalancer
