lda/lda-frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lda-frontend-ingress
spec:
  rules:
  - host: lda.rbxrobotica.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lda-frontend-svc
            port:
              number: 80
